# artificial-coin

./: README.md  bootstrap.sh  deploy.sh  interest.py
agov/: Cargo.toml  README.md  build.sh
agov/res/: agov.wasm  lockable_fungible_token.wasm
agov/src/: lib.rs
agov/tests/: general.rs
art/: Cargo.toml  build.sh
art/res/: art-new.wasm  art-old.wasm  art.wasm
art/src/: lib.rs  temp.rs
art/tests/: general.rs
ausd/: Cargo.toml  build.sh
ausd/res/: ausd.wasm  fungible_token.wasm
ausd/src/: lib.rs
ausd/tests/: general.rs
