[package]
name = "agov"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="9d21d8e97ae20b3d0a7ef2337c94373df215e180" }
num-rational = "0.4"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="9d21d8e97ae20b3d0a7ef2337c94373df215e180" }
ausd = { path = "../ausd" }
lazy_static = "1.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
