[package]
name = "art"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="cab8e84fdfed3cc6b82b369cafca2e8451f7485d" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs.git", rev="cab8e84fdfed3cc6b82b369cafca2e8451f7485d" }
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="cab8e84fdfed3cc6b82b369cafca2e8451f7485d" }
ausd = { path = "../ausd" }
lazy_static = "1.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
